tests/macros/float/choices.stderr
error: option `choices` does not exist for kind `float`
 --> $DIR/choices.rs:2:35
  |
2 |     requestty::questions![Float { choices: todo!() }];
  |                                   ^^^^^^^
