tests/macros/float/choices.rs
fn main() {
    requestty::questions![Float { choices: todo!() }];
}
